tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/spec/keys-2.stderr
TOML parse error at line 1, column 1
  |
1 | = "no key name"  # INVALID
  | ^
invalid key
